[gd_scene load_steps=44 format=3 uid="uid://bdyqboxekyt0i"]

[ext_resource type="PackedScene" uid="uid://kv4dwkxm762a" path="res://assets/tutorbot/tutorbot.gltf" id="1_g4kiq"]
[ext_resource type="Script" path="res://actors/player/player.gd" id="1_ib0r2"]
[ext_resource type="Animation" uid="uid://b6hefwac8nmw2" path="res://assets/tutorbot/tutorbot_anims/air_fall.res" id="2_eiqwr"]
[ext_resource type="Animation" uid="uid://p4wdlems5cgu" path="res://assets/tutorbot/tutorbot_anims/air_rise.res" id="3_ia8y0"]
[ext_resource type="Animation" uid="uid://dbj2cgspuw6ld" path="res://assets/tutorbot/tutorbot_anims/idle.res" id="4_xq2t4"]
[ext_resource type="Animation" uid="uid://ua2608gpepqd" path="res://assets/tutorbot/tutorbot_anims/jump.res" id="5_bslfn"]
[ext_resource type="Animation" uid="uid://cb3y8d66dir85" path="res://assets/tutorbot/tutorbot_anims/landing.res" id="6_ejqg5"]
[ext_resource type="Animation" uid="uid://cqlbb4ekp712f" path="res://assets/tutorbot/tutorbot_anims/run.res" id="7_kc6ai"]
[ext_resource type="Animation" uid="uid://bq1t28u1kenym" path="res://assets/tutorbot/tutorbot_anims/walk.res" id="8_o8h17"]

[sub_resource type="Animation" id="Animation_dxnm7"]
resource_name = "RESET"
length = 3.06667
tracks/0/type = "rotation_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("TutorBot/Skeleton3D:thigh.R")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.0139272, 0.999903, 2.9223e-08, 7.54789e-08)
tracks/1/type = "rotation_3d"
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/path = NodePath("TutorBot/Skeleton3D:shin.R")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 2.69524e-08, -4.3012e-08, -0.0087048, 0.999962)
tracks/2/type = "position_3d"
tracks/2/imported = true
tracks/2/enabled = true
tracks/2/path = NodePath("TutorBot/Skeleton3D:cog")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 0, 0.331227, 0)
tracks/3/type = "rotation_3d"
tracks/3/imported = true
tracks/3/enabled = true
tracks/3/path = NodePath("TutorBot/Skeleton3D:cog")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, -3.55271e-15, -1.19209e-07, 4.23517e-22, 1)
tracks/4/type = "position_3d"
tracks/4/imported = true
tracks/4/enabled = true
tracks/4/path = NodePath("TutorBot/Skeleton3D:footIK.L")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = PackedFloat32Array(0, 1, -0.0589469, 0.0128033, -0.0248614)
tracks/5/type = "rotation_3d"
tracks/5/imported = true
tracks/5/enabled = true
tracks/5/path = NodePath("TutorBot/Skeleton3D:footIK.L")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = PackedFloat32Array(0, 1, -0.519345, -0.479877, 0.519344, 0.479877)
tracks/6/type = "position_3d"
tracks/6/imported = true
tracks/6/enabled = true
tracks/6/path = NodePath("TutorBot/Skeleton3D:handIK.L")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = PackedFloat32Array(0, 1, -0.21042, 0.288187, -0.0148384)
tracks/7/type = "rotation_3d"
tracks/7/imported = true
tracks/7/enabled = true
tracks/7/path = NodePath("TutorBot/Skeleton3D:handIK.L")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = PackedFloat32Array(0, 1, 0.00836309, -0.00135377, 0.987116, 0.159784)
tracks/8/type = "position_3d"
tracks/8/imported = true
tracks/8/enabled = true
tracks/8/path = NodePath("TutorBot/Skeleton3D:footIK.R")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = PackedFloat32Array(0, 1, 0.0589469, 0.0128033, -0.0248614)
tracks/9/type = "rotation_3d"
tracks/9/imported = true
tracks/9/enabled = true
tracks/9/path = NodePath("TutorBot/Skeleton3D:footIK.R")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = PackedFloat32Array(0, 1, -0.519344, 0.479876, -0.519344, 0.479877)
tracks/10/type = "position_3d"
tracks/10/imported = true
tracks/10/enabled = true
tracks/10/path = NodePath("TutorBot/Skeleton3D:handIK.R")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = PackedFloat32Array(0, 1, 0.21042, 0.288187, -0.0148383)
tracks/11/type = "rotation_3d"
tracks/11/imported = true
tracks/11/enabled = true
tracks/11/path = NodePath("TutorBot/Skeleton3D:handIK.R")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = PackedFloat32Array(0, 1, 0.00836332, 0.00135373, -0.987116, 0.159784)
tracks/12/type = "position_3d"
tracks/12/imported = true
tracks/12/enabled = true
tracks/12/path = NodePath("TutorBot/Skeleton3D:upper_arm.L")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = PackedFloat32Array(0, 1, -0.124582, 0.103741, -0.00504827)
tracks/13/type = "rotation_3d"
tracks/13/imported = true
tracks/13/enabled = true
tracks/13/path = NodePath("TutorBot/Skeleton3D:upper_arm.L")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = PackedFloat32Array(0, 1, 0.00836305, -0.00135372, 0.987116, 0.159784)
tracks/14/type = "position_3d"
tracks/14/imported = true
tracks/14/enabled = true
tracks/14/path = NodePath("TutorBot/Skeleton3D:upper_arm.R")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = PackedFloat32Array(0, 1, 0.124582, 0.103741, -0.00504828)
tracks/15/type = "rotation_3d"
tracks/15/imported = true
tracks/15/enabled = true
tracks/15/path = NodePath("TutorBot/Skeleton3D:upper_arm.R")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = PackedFloat32Array(0, 1, 0.00836304, 0.00135373, -0.987116, 0.159784)
tracks/16/type = "rotation_3d"
tracks/16/imported = true
tracks/16/enabled = true
tracks/16/path = NodePath("TutorBot/Skeleton3D:body")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = PackedFloat32Array(0, 1, -3.70865e-09, -8.26531e-09, -8.26531e-09, 1)
tracks/17/type = "rotation_3d"
tracks/17/imported = true
tracks/17/enabled = true
tracks/17/path = NodePath("TutorBot/Skeleton3D:forearm.L")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = PackedFloat32Array(0, 1, -0.036469, -1.85457e-07, 0.000617975, 0.999335)
tracks/18/type = "rotation_3d"
tracks/18/imported = true
tracks/18/enabled = true
tracks/18/path = NodePath("TutorBot/Skeleton3D:head")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = PackedFloat32Array(0, 1, -3.33067e-15, -4.8562e-17, -9.36739e-16, 1)
tracks/19/type = "rotation_3d"
tracks/19/imported = true
tracks/19/enabled = true
tracks/19/path = NodePath("TutorBot/Skeleton3D:forearm.R")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = PackedFloat32Array(0, 1, -0.036469, 1.85428e-07, -0.000617945, 0.999335)
tracks/20/type = "rotation_3d"
tracks/20/imported = true
tracks/20/enabled = true
tracks/20/path = NodePath("TutorBot/Skeleton3D:hips")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = PackedFloat32Array(0, 1, 0.707107, -5.0243e-15, -0.707107, 8.98414e-22)
tracks/21/type = "rotation_3d"
tracks/21/imported = true
tracks/21/enabled = true
tracks/21/path = NodePath("TutorBot/Skeleton3D:thigh.L")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/keys = PackedFloat32Array(0, 1, -2.82736e-08, 4.39409e-08, 0.0139407, 0.999903)
tracks/22/type = "rotation_3d"
tracks/22/imported = true
tracks/22/enabled = true
tracks/22/path = NodePath("TutorBot/Skeleton3D:shin.L")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/keys = PackedFloat32Array(0, 1, 2.56276e-08, 3.08819e-08, 0.00868819, 0.999962)
tracks/23/type = "rotation_3d"
tracks/23/imported = true
tracks/23/enabled = true
tracks/23/path = NodePath("TutorBot/Skeleton3D:foot.L")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/keys = PackedFloat32Array(0, 1, 1.21891e-07, 3.19157e-09, -0.613646, 0.789581)
tracks/24/type = "rotation_3d"
tracks/24/imported = true
tracks/24/enabled = true
tracks/24/path = NodePath("TutorBot/Skeleton3D:foot.R")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/keys = PackedFloat32Array(0, 1, 1.21891e-07, -3.19156e-09, 0.613646, 0.789581)
tracks/25/type = "rotation_3d"
tracks/25/imported = true
tracks/25/enabled = true
tracks/25/path = NodePath("TutorBot/Skeleton3D:toe.L")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/keys = PackedFloat32Array(0, 1, 2.13639e-08, -4.23164e-09, -0.10767, 0.994187)
tracks/26/type = "rotation_3d"
tracks/26/imported = true
tracks/26/enabled = true
tracks/26/path = NodePath("TutorBot/Skeleton3D:toe.R")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/keys = PackedFloat32Array(0, 1, 2.13639e-08, 4.23165e-09, 0.10767, 0.994187)
tracks/27/type = "rotation_3d"
tracks/27/imported = true
tracks/27/enabled = true
tracks/27/path = NodePath("TutorBot/Skeleton3D:toe_pivot.L")
tracks/27/interp = 1
tracks/27/loop_wrap = true
tracks/27/keys = PackedFloat32Array(0, 1, 2.0146e-07, 5.71659e-08, -0.734464, 0.678648)
tracks/28/type = "rotation_3d"
tracks/28/imported = true
tracks/28/enabled = true
tracks/28/path = NodePath("TutorBot/Skeleton3D:toe_pivot.R")
tracks/28/interp = 1
tracks/28/loop_wrap = true
tracks/28/keys = PackedFloat32Array(0, 1, 2.04604e-07, -5.37635e-08, 0.734464, 0.678648)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n00dr"]
_data = {
"AirFall": ExtResource("2_eiqwr"),
"AirRise": ExtResource("3_ia8y0"),
"JumpStart": ExtResource("5_bslfn"),
"Landing": ExtResource("6_ejqg5"),
"RESET": SubResource("Animation_dxnm7"),
"Run": ExtResource("7_kc6ai"),
"idle": ExtResource("4_xq2t4"),
"walk": ExtResource("8_o8h17")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0uoca"]
animation = &"AirRise"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pt44m"]
animation = &"AirFall"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_gjh0r"]
blend_point_0/node = SubResource("AnimationNodeAnimation_0uoca")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_pt44m")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dkklt"]
animation = &"Landing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_63tif"]
animation = &"JumpStart"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_xpbuq"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_pb2pk"]
xfade_time = 0.1
input_0/name = "ground"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "Air"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1sxkj"]
animation = &"idle"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_akrnm"]
fadein_time = 0.1

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_4ca5u"]
fadeout_time = 0.1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7axlr"]
animation = &"Run"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_drk8m"]
xfade_time = 0.3
input_0/name = "Walk"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "Sprint"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_hdj08"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_k7m61"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_4utcr"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3r886"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_lif1s"]
graph_offset = Vector2(-503.979, 124.516)
nodes/AirVelocityBlend/node = SubResource("AnimationNodeBlendSpace1D_gjh0r")
nodes/AirVelocityBlend/position = Vector2(-260, 500)
nodes/Animation/node = SubResource("AnimationNodeAnimation_63tif")
nodes/Animation/position = Vector2(-260, 360)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_dkklt")
"nodes/Animation 2/position" = Vector2(323.418, 550.879)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_xpbuq")
nodes/Blend2/position = Vector2(-500, 100)
nodes/GroundTransition/node = SubResource("AnimationNodeTransition_pb2pk")
nodes/GroundTransition/position = Vector2(300, 260)
nodes/Idle/node = SubResource("AnimationNodeAnimation_1sxkj")
nodes/Idle/position = Vector2(-760, 60)
nodes/JumpShot/node = SubResource("AnimationNodeOneShot_akrnm")
nodes/JumpShot/position = Vector2(40, 160)
nodes/LandingShot/node = SubResource("AnimationNodeOneShot_4ca5u")
nodes/LandingShot/position = Vector2(660, 360)
nodes/Run/node = SubResource("AnimationNodeAnimation_7axlr")
nodes/Run/position = Vector2(-480, 300)
nodes/RunTransition/node = SubResource("AnimationNodeTransition_drk8m")
nodes/RunTransition/position = Vector2(-120, 140)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_4utcr")
nodes/TimeScale/position = Vector2(-740, 220)
"nodes/TimeScale 2/node" = SubResource("AnimationNodeTimeScale_hdj08")
"nodes/TimeScale 2/position" = Vector2(-300, 240)
"nodes/TimeScale 3/node" = SubResource("AnimationNodeTimeScale_k7m61")
"nodes/TimeScale 3/position" = Vector2(-120, 320)
nodes/output/position = Vector2(900, 340)
nodes/walk/node = SubResource("AnimationNodeAnimation_3r886")
nodes/walk/position = Vector2(-940, 260)
node_connections = [&"Blend2", 0, &"Idle", &"Blend2", 1, &"TimeScale", &"GroundTransition", 0, &"JumpShot", &"GroundTransition", 1, &"AirVelocityBlend", &"JumpShot", 0, &"RunTransition", &"JumpShot", 1, &"TimeScale 3", &"LandingShot", 0, &"GroundTransition", &"LandingShot", 1, &"Animation 2", &"RunTransition", 0, &"Blend2", &"RunTransition", 1, &"TimeScale 2", &"TimeScale", 0, &"walk", &"TimeScale 2", 0, &"Run", &"TimeScale 3", 0, &"Animation", &"output", 0, &"LandingShot"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d6xvr"]
radius = 0.181893
height = 0.87065

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xohab"]
albedo_color = Color(0.235294, 0.207843, 0.215686, 1)
roughness = 0.14
emission_enabled = true
emission = Color(0.552941, 0.576471, 0.662745, 1)
emission_energy_multiplier = 5.0

[sub_resource type="SphereShape3D" id="SphereShape3D_rdt5e"]
radius = 10.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4301n"]
transparency = 1
vertex_color_use_as_albedo = true

[sub_resource type="Gradient" id="Gradient_p7mny"]
offsets = PackedFloat32Array(0, 0.62037)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fhdob"]
gradient = SubResource("Gradient_p7mny")

[sub_resource type="Curve" id="Curve_fhk04"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.340206), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_kkr4t"]
curve = SubResource("Curve_fhk04")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nv3mv"]
lifetime_randomness = 0.82
emission_shape = 3
emission_box_extents = Vector3(0.2, 0.2, 0.2)
gravity = Vector3(0, 1, 0)
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_min = 0.2
scale_max = 0.2
scale_curve = SubResource("CurveTexture_kkr4t")
color_ramp = SubResource("GradientTexture1D_fhdob")

[sub_resource type="SphereMesh" id="SphereMesh_uyl6o"]
radial_segments = 6
rings = 2

[sub_resource type="Gradient" id="Gradient_o5s14"]
offsets = PackedFloat32Array(0.138889, 0.453704)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hgjfw"]
gradient = SubResource("Gradient_o5s14")

[sub_resource type="Curve" id="Curve_1q6ea"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.546392), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_vqyhs"]
curve = SubResource("Curve_1q6ea")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2pyxy"]
lifetime_randomness = 1.0
spread = 180.0
flatness = 1.0
initial_velocity_min = 2.0
initial_velocity_max = 2.0
radial_velocity_min = 0.1
radial_velocity_max = 0.1
gravity = Vector3(0, 0.2, 0)
scale_min = 0.2
scale_max = 0.2
scale_curve = SubResource("CurveTexture_vqyhs")
color_ramp = SubResource("GradientTexture1D_hgjfw")

[node name="TutorBot" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_ib0r2")
walk_speed = 2.0
run_speed = 4.52

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Mesh/tutorbot")
libraries = {
"": SubResource("AnimationLibrary_n00dr")
}
tree_root = SubResource("AnimationNodeBlendTree_lif1s")
anim_player = NodePath("../Mesh/tutorbot/AnimationPlayer")
parameters/AirVelocityBlend/blend_position = 1.095
parameters/Blend2/blend_amount = 1.0
parameters/GroundTransition/current_state = "Air"
parameters/GroundTransition/transition_request = ""
parameters/GroundTransition/current_index = 1
parameters/JumpShot/active = false
parameters/JumpShot/internal_active = false
parameters/JumpShot/request = 0
parameters/LandingShot/active = false
parameters/LandingShot/internal_active = false
parameters/LandingShot/request = 0
parameters/RunTransition/current_state = "Walk"
parameters/RunTransition/transition_request = ""
parameters/RunTransition/current_index = 0
parameters/TimeScale/scale = 1.3
"parameters/TimeScale 2/scale" = 1.4
"parameters/TimeScale 3/scale" = 0.8

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.435351, 0)
shape = SubResource("CapsuleShape3D_d6xvr")

[node name="Mesh" type="Node3D" parent="."]

[node name="tutorbot" parent="Mesh" instance=ExtResource("1_g4kiq")]

[node name="Skeleton3D" parent="Mesh/tutorbot/TutorBot" index="0"]
bones/0/rotation = Quaternion(-2.98023e-08, 1.19209e-07, -2.11758e-22, 1)
bones/3/rotation = Quaternion(0.00836305, -0.00135372, 0.987116, 0.159784)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(-0.036469, -1.85459e-07, 0.000617974, 0.999335)
bones/6/rotation = Quaternion(-0.00836304, -0.00135373, 0.987116, -0.159784)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.036469, 1.85431e-07, -0.000617945, 0.999335)
bones/8/rotation = Quaternion(0.707107, -5.0243e-15, -0.707107, 7.48679e-22)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(1.21891e-07, 3.19157e-09, -0.613646, 0.789581)
bones/13/rotation = Quaternion(-0.0139272, 0.999903, 2.9223e-08, 7.54789e-08)
bones/14/rotation = Quaternion(2.69524e-08, -4.3012e-08, -0.0087048, 0.999962)
bones/14/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(1.21891e-07, -3.19156e-09, 0.613646, 0.789581)
bones/15/scale = Vector3(1, 1, 1)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(0.519345, 0.479877, -0.519344, -0.479876)
bones/18/rotation = Quaternion(2.0146e-07, 5.71659e-08, -0.734464, 0.678648)
bones/19/rotation = Quaternion(-2.12759e-07, -5.97949e-08, 0.803264, 0.595623)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(0.519344, -0.479876, 0.519344, -0.479877)
bones/22/rotation = Quaternion(2.04604e-07, -5.37635e-08, 0.734464, 0.678648)
bones/23/rotation = Quaternion(-2.08876e-07, 5.42224e-08, -0.803264, 0.595623)
bones/23/scale = Vector3(1, 1, 1)
bones/24/rotation = Quaternion(-0.00836332, -0.00135373, 0.987116, -0.159784)
bones/24/scale = Vector3(1, 1, 1)

[node name="TutorBotMesh" parent="Mesh/tutorbot/TutorBot/Skeleton3D" index="0"]
surface_material_override/3 = SubResource("StandardMaterial3D_xohab")

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Mesh/tutorbot/TutorBot/Skeleton3D" index="1"]
transform = Transform3D(1, 1.65306e-08, -1.65312e-08, -1.65306e-08, 1, 6.70219e-08, 1.65312e-08, -6.70219e-08, 1, 2.98595e-09, 0.623276, -3.84899e-08)
bone_name = "head"
bone_idx = 5

[node name="SprintTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.682278, 0)

[node name="TargetCast" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -10)
collision_mask = 513
collide_with_areas = true

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_rdt5e")

[node name="RunParticals" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_4301n")
amount = 10
visibility_aabb = AABB(-1.79153, -1.7265, -1.809, 3.58307, 3.45301, 3.618)
process_material = SubResource("ParticleProcessMaterial_nv3mv")
draw_pass_1 = SubResource("SphereMesh_uyl6o")

[node name="LandingParticals" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_4301n")
amount = 20
explosiveness = 1.0
visibility_aabb = AABB(-1.79153, -1.7265, -1.809, 3.58307, 3.45301, 3.618)
process_material = SubResource("ParticleProcessMaterial_2pyxy")
draw_pass_1 = SubResource("SphereMesh_uyl6o")

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="SprintTimer" to="." method="_on_sprint_timer_timeout"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]

[editable path="Mesh/tutorbot"]
